# Football

./: .gitignore  CNAME  READ.MD  README.md  controller.py  package-lock.json  package.json  pyproject.toml  remapping.txt  tailwind.config.ts  vite.config.js  workspace.bat
.github/workflows/: static.yml
data/: march.json
docs/: pitch.md  tailwind_theme_setup.md  viem_Setup.md
frontend/: app.html  index.html  leagues.html  matches.html  news.html  profile.html  stats.html
frontend/assets/: index.css  output.css
frontend/assets/js/: components.js  web3connector.js
frontend/assets/js/viem/: ccip-EYEu8Aj5.js  web3bundle.js  web3connector-DxRFWEeQ.js
frontend/data/: march.json
frontend/leagues/football_spot/: index.html  league.json  march.json  stats.html
frontend/leagues/football_spot/seasons/: april_2026.html  april_2026.json  february_2026.html  february_2026.json  march_2026.html  march_2026.json  may_2026.html  may_2026.json  seasons.json  testing.json
frontend/leagues/rep_your_club/: index.html  league.json  player_stats.html
frontend/leagues/rep_your_club/seasons/: july-august_2026.json  july_august_2026.json  seasons.json
frontend/leagues/test/: league.json
frontend/leagues/test/seasons/: july-august_2026.html  july-august_2026.json  july_august.json  july_august_2026.html  july_august_2026.json  seasons.json
src/: controller.py  formats.py  renderer.py
templates/: base_admin.jinja  base_app.jinja  components.jinja  football-spot-default.html  football-spot-default.jinja  football-spot.html  football-spot.jinja  footbll-spot.html  leagues.html  scratch.html  v2-league-default.html  v2-league-default.jinja  v2-league-stats.jinja  v2-league.jinja
