[project]
name = "fotclan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "poethepoet>=0.42.1",
    "rich>=14.3.3",
]

[tool.poe.tasks]
test = "pytest"
