[project]
name = "fotclan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "poethepoet>=0.42.1",
    "rich>=14.3.3",
    "watchfiles>=1.2.0",
]

[tool.poe.tasks]
test = 'pytest'
build = 'python src/renderer.py'

[tool.poe.tasks.watch]
shell = 'watchfiles "uv run python src/renderer.py" templates'