[project]
name = "fotclan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "poethepoet>=0.42.1",
    "rich>=14.3.3",
    "watchfiles>=1.2.0",
]

[tool.poe.tasks]
test = 'pytest'

[tool.poe.tasks.script]
cmd = 'python src/formats.py'
help = "used to run the python build script"

[tool.poe.tasks.build-src]
cmd = 'python src/renderer.py'
help = "used to run the python build script"

[tool.poe.tasks.build-css]
shell = 'npm run build:css'
cwd = "./frontend"
help = "run the css build command"

[tool.poe.tasks.build]
sequence = ["build-css", "build-src"]
help = "Build the css and the html"

[tool.poe.tasks.watch-src]
cmd = 'watchfiles "uv run python src/renderer.py" templates'
help = "used to watch a folder for changes and run the html build command"

[tool.poe.tasks.watch-css]
shell = 'npm run build:css-watch'
cwd = "./frontend"
help = "used to watch a folder for changes and run the css build command"

